@@ -17,6 +17,7 @@ s0_draw_stretched_window = false
 
 [resize]
 s0_mode = 2
+s0_disable_blend = true
 
 [opengl]
 s0_texture_filter = 0
