@@ -85,30 +85,44 @@ ResizeScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
 				unsigned short            *fillColor)
 {
     GLVertexBuffer *streamingBuffer = GLVertexBuffer::streamingBuffer ();
+    const unsigned short MaxUShort = std::numeric_limits <unsigned short>::max ();
+    const float MaxUShortFloat = MaxUShort;
 
     BoxRec   	   box;
+    CompRegion     damageRegion;
     GLMatrix 	   sTransform (transform);
     GLfloat         vertexData [12];
     GLfloat         vertexData2[24];
     GLint    	   origSrc, origDst;
     GLushort	    fc[4], bc[4];
 
+    bool blend = !optionGetDisableBlend ();
+
+    if (blend && borderColor[3] == MaxUShort)
+    {
+	if (optionGetMode () == ResizeOptions::ModeOutline || fillColor[3] == MaxUShort)
+	    blend = false;
+    }
+
+    if (blend)
+    {
 #ifdef USE_GLES
-    GLint           origSrcAlpha, origDstAlpha;
-    glGetIntegerv (GL_BLEND_SRC_RGB, &origSrc);
-    glGetIntegerv (GL_BLEND_DST_RGB, &origDst);
-    glGetIntegerv (GL_BLEND_SRC_ALPHA, &origSrcAlpha);
-    glGetIntegerv (GL_BLEND_DST_ALPHA, &origDstAlpha);
+	GLint origSrcAlpha, origDstAlpha;
+	glGetIntegerv (GL_BLEND_SRC_RGB, &origSrc);
+	glGetIntegerv (GL_BLEND_DST_RGB, &origDst);
+	glGetIntegerv (GL_BLEND_SRC_ALPHA, &origSrcAlpha);
+	glGetIntegerv (GL_BLEND_DST_ALPHA, &origDstAlpha);
 #else
-    glGetIntegerv (GL_BLEND_SRC, &origSrc);
-    glGetIntegerv (GL_BLEND_DST, &origDst);
+	glGetIntegerv (GL_BLEND_SRC, &origSrc);
+	glGetIntegerv (GL_BLEND_DST, &origDst);
 #endif
+    }
 
     /* Premultiply the alpha values */
-    bc[3] = (float) borderColor[3] / (float) 65535.0f;
-    bc[0] = ((float) borderColor[0] / 65535.0f) * bc[3];
-    bc[1] = ((float) borderColor[1] / 65535.0f) * bc[3];
-    bc[2] = ((float) borderColor[2] / 65535.0f) * bc[3];
+    bc[3] = blend ? ((float) borderColor[3] / MaxUShortFloat) : MaxUShortFloat;
+    bc[0] = ((float) borderColor[0] / MaxUShortFloat) * bc[3];
+    bc[1] = ((float) borderColor[1] / MaxUShortFloat) * bc[3];
+    bc[2] = ((float) borderColor[2] / MaxUShortFloat) * bc[3];
 
     logic.getPaintRectangle (&box);
 
@@ -159,16 +173,19 @@ ResizeScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
 
     sTransform.toScreenSpace (output, -DEFAULT_Z_CAMERA);
 
-    glEnable (GL_BLEND);
-    glBlendFunc (GL_ONE, GL_ONE_MINUS_SRC_ALPHA);
+    if (blend)
+    {
+	glEnable (GL_BLEND);
+	glBlendFunc (GL_ONE, GL_ONE_MINUS_SRC_ALPHA);
+    }
 
     /* fill rectangle */
     if (fillColor)
     {
-	fc[3] = fillColor[3];
-	fc[0] = fillColor[0] * (unsigned long)fc[3] / 65535;
-	fc[1] = fillColor[1] * (unsigned long)fc[3] / 65535;
-	fc[2] = fillColor[2] * (unsigned long)fc[3] / 65535;
+	fc[3] = blend ? fillColor[3] : 0.85f * MaxUShortFloat;
+	fc[0] = fillColor[0] * (unsigned long) fc[3] / MaxUShortFloat;
+	fc[1] = fillColor[1] * (unsigned long) fc[3] / MaxUShortFloat;
+	fc[2] = fillColor[2] * (unsigned long) fc[3] / MaxUShortFloat;
 
 	streamingBuffer->begin (GL_TRIANGLE_STRIP);
 	streamingBuffer->addColors (1, fc);
@@ -186,20 +203,52 @@ ResizeScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
     streamingBuffer->end ();
     streamingBuffer->render (sTransform);
 
-    glDisable (GL_BLEND);
+    if (blend)
+    {
+	glDisable (GL_BLEND);
 #ifdef USE_GLES
-    glBlendFuncSeparate (origSrc, origDst,
-                         origSrcAlpha, origDstAlpha);
+	glBlendFuncSeparate (origSrc, origDst,
+			     origSrcAlpha, origDstAlpha);
 #else
-    glBlendFunc (origSrc, origDst);
+	glBlendFunc (origSrc, origDst);
 #endif
+    }
 
     CompositeScreen *cScreen = CompositeScreen::get (screen);
-    CompRect damage (box.x1 - borderWidth,
-                     box.y1 - borderWidth,
-                     box.x2 - box.x1 + 2 * borderWidth,
-                     box.y2 - box.y1 + 2 * borderWidth);
-    cScreen->damageRegion (damage);
+
+    if (optionGetMode () == ResizeOptions::ModeOutline)
+    {
+	// Top
+	damageRegion += CompRect (box.x1 - borderWidth,
+				  box.y1 - borderWidth,
+				  box.x2 - box.x1 + borderWidth * 2,
+				  borderWidth + 1);
+	// Right
+	damageRegion += CompRect (box.x2 - borderWidth,
+				  box.y1 - borderWidth,
+				  borderWidth + 1,
+				  box.y2 - box.y1 + borderWidth * 2);
+	// Bottom
+	damageRegion += CompRect (box.x1 - borderWidth,
+				  box.y2 - borderWidth,
+				  box.x2 - box.x1 + borderWidth * 2,
+				  borderWidth + 1);
+	// Left
+	damageRegion += CompRect (box.x1 - borderWidth,
+				  box.y1 - borderWidth,
+				  borderWidth + 1,
+				  box.y2 - box.y1 + borderWidth * 2);
+    }
+    else
+    {
+	CompRect damage (box.x1 - borderWidth,
+			 box.y1 - borderWidth,
+			 box.x2 - box.x1 + borderWidth * 2,
+			 box.y2 - box.y1 + borderWidth * 2);
+	damageRegion += damage;
+    }
+
+    cScreen->damageRegion (damageRegion);
 }
 
 bool
